[gd_scene load_steps=3 format=3 uid="uid://b7x7qgqj7xmxs"]

[ext_resource type="Script" uid="uid://b4iurxemw0p0e" path="res://level_designer.gd" id="1_7xqtb"]
[ext_resource type="TileSet" uid="uid://glg14whq4w71" path="res://tileset.tres" id="2_tileset"]

[node name="LevelDesigner" type="Node2D"]
script = ExtResource("1_7xqtb")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("2_tileset")

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 10

[node name="TypeLabel" type="Label" parent="UILayer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 36.0
text = "Current Type: Wall"

[node name="WallButton" type="Button" parent="UILayer"]
offset_left = 10.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 81.0
text = "Wall"

[node name="FloorButton" type="Button" parent="UILayer"]
offset_left = 110.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 81.0
text = "Floor"

[node name="HoleButton" type="Button" parent="UILayer"]
offset_left = 210.0
offset_top = 50.0
offset_right = 300.0
offset_bottom = 81.0
text = "Hole"

[node name="LadderButton" type="Button" parent="UILayer"]
offset_left = 310.0
offset_top = 50.0
offset_right = 400.0
offset_bottom = 81.0
text = "Ladder"

[node name="SwitchButton" type="Button" parent="UILayer"]
offset_left = 410.0
offset_top = 50.0
offset_right = 500.0
offset_bottom = 81.0
text = "Switch"

[node name="PlayerStartButton" type="Button" parent="UILayer"]
offset_left = 510.0
offset_top = 50.0
offset_right = 600.0
offset_bottom = 81.0
text = "Player"

[node name="ExportButton" type="Button" parent="UILayer"]
offset_left = 610.0
offset_top = 50.0
offset_right = 700.0
offset_bottom = 81.0
text = "Export"

[node name="LoadButton" type="Button" parent="UILayer"]
offset_left = 710.0
offset_top = 50.0
offset_right = 800.0
offset_bottom = 81.0
text = "Load"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1, 1)
